--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
               <li><a href="#">Products</a></li>
               <li><a href="#">Support</a></li>
             </ul>
+          </ul>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
           </nav>
         </div>
         <div class="message">
@@ -34,7 +40,7 @@
       <div class="content">
         <div class="over">
           <div class="left">
-            <img src="/images/desktop/image-interactive.jpg" alt="">
+           
           </div>
           <div class="right">
             <h2>The leader in interactive VR</h2>
@@ -132,5 +138,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+  <script src="style.js"></script>
 </body>
 </html>
