--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   
-  <title>FRONTEND MENTOR | Loopstudios landing page</title>
+  <title> Loopstudios landing page</title>
 
 </head>
 <body>
